[gd_scene load_steps=5 format=3 uid="uid://b71ecahqtlgwl"]

[ext_resource type="Texture2D" uid="uid://cgxkl6ksh32q5" path="res://Assets/sproutlands-premium/objects/Items/All items.png" id="1_nj1g5"]
[ext_resource type="Script" path="res://Scripts/MenuCrop.gd" id="2_oj848"]

[sub_resource type="AtlasTexture" id="AtlasTexture_ixgdx"]
atlas = ExtResource("1_nj1g5")
region = Rect2(16, 16, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_0evg6"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ixgdx")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[node name="MenuCrop" type="AnimatedSprite2D"]
position = Vector2(300, 100)
sprite_frames = SubResource("SpriteFrames_0evg6")
centered = false
script = ExtResource("2_oj848")

[node name="Button" type="Button" parent="."]
modulate = Color(1, 1, 1, 0)
offset_right = 16.0
offset_bottom = 16.0
metadata/_edit_use_anchors_ = true

[node name="LockedIcon" type="ColorRect" parent="."]
modulate = Color(0.341176, 0.341176, 0.341176, 0.682353)
anchors_preset = -1
anchor_top = 0.00624996
anchor_right = 0.0624999
anchor_bottom = 0.00624996
offset_top = -0.0999994
offset_right = 15.0
offset_bottom = 15.9
metadata/_edit_use_anchors_ = true

[node name="SelectedIcon" type="ReferenceRect" parent="."]
visible = false
offset_right = 16.0
offset_bottom = 16.0
border_color = Color(1, 1, 1, 1)
editor_only = false

[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
